[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/mushroomMerchant.png" type="Texture" id=1]
[ext_resource path="res://scenes/npc/merchant.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 847, 436 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 89, 82.5 )
scale = Vector2( 2.78125, 2.57812 )
texture = ExtResource( 1 )

[node name="left" type="Node2D" parent="."]
position = Vector2( -61, 289 )

[node name="right" type="Node2D" parent="."]
position = Vector2( 230, 294 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 20.427
autostart = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
